refactor: refactor image^ title

--- a/datacenter-project/#src/components/company/about/_about-datacenter.html
+++ b/datacenter-project/#src/components/company/about/_about-datacenter.html
@@ -1,70 +1,81 @@
 <section class="about-datacenter section-padding">
-    <div class="container">
-        <div class="about-datacenter__content layout-2-column layout-2-column_reverse">
-            <div class="about-datacenter__info">
-                <h3>Электропитание</h3>
-                <div class="about-datacenter__text">
-                    <p>Электропитание обеспечивается двумя независимыми вводами от разных электростанций
-                        и дизель-генераторной установкой.</p>
-                    <p>Система электропитания дата-центра состоит из комплекса, включающего в себя 3 источника
-                        бесперебойного питания (ИБП), зарезервированных по принципу N+1 и
-                        одной дизель-генераторной установки (ДГУ) с запасом топлива для автономной работы в течение 20
-                        часов.</p>
-                    <p>Дизель-генераторная установка рассчитана на одновременную работу всего оборудования
-                        дата-центра, системы охлаждения и на подзарядку батарей всех ИБП. ДГУ проходит систему
-                        ежемесячных
-                        испытаний.</p>
-                </div>
+    <div class="container about-datacenter__container">
+        <div class="layout-2-column layout-2-column_reverse">
+            <div class="about-datacenter__content">
+                <h3 class="title title_left">Электропитание</h3>
+                <p class="paragraph">Электропитание обеспечивается двумя независимыми вводами от разных электростанций
+                    и дизель-генераторной установкой.</p>
+                <p class="paragraph">Система электропитания дата-центра состоит из комплекса, включающего в себя 3
+                    источника
+                    бесперебойного питания (ИБП), зарезервированных по принципу N+1 и
+                    одной дизель-генераторной установки (ДГУ) с запасом топлива для автономной работы в течение 20
+                    часов.</p>
+                <p class="paragraph">Дизель-генераторная установка рассчитана на одновременную работу всего оборудования
+                    дата-центра, системы охлаждения и на подзарядку батарей всех ИБП. ДГУ проходит систему
+                    ежемесячных
+                    испытаний.</p>
             </div>
-            <img class="about-datacenter__img" id='server-img' src="img/about-us/hosting.png" alt="hosting">
+            <div class="image__container">
+                <img id="server-img" src="img/about-us/hosting.png" alt="hosting">
+            </div>
         </div>
-        <div class="about-datacenter__content layout-2-column">
-            <img class="about-datacenter__img" src="img/about-us/web_hosting.png" alt="web_hosting">
-            <div class="about-datacenter__info">
-                <h3>Каналы связи</h3>
-                <div class="about-datacenter__text">
-                    <p>Оптоволоконная инфраструктура построена по системе «кольцо». Транспортная сеть 10/40G построена
-                        по технологии 2N. Подключения клиентов осуществляются по технологиям 10/100/1000 auto (copper-rj45)
-                        и 1/10G (fiber sm/mm). Возможно LACP-включение в ядро сети в порты 2x1/10G (fiber sm/mm) с
-                        резервированием коммутаторов на нашей стороне. Операторы, включенные в транспортную сеть:
-                        Becloud, НЦОТ, МТС, Деловая сеть, TCM, Айпи Телком, Флайнет, Qline, Айчына, Анитекс.</p>
-                    <p>Операторы связи, имеющие точку присутствия (коммутатор) в ЦОД, и оказывающие клиентам ЦОД услугу
-                        присоединения к их сетям: ТСМ, Деловая сеть, Белтелеком, МТС, Банковская финансовая телесеть
-                        (БФТ), Айпи Телком, Флайнет.</p>
-                </div>
+        <div class="layout-2-column">
+            <div class="about-datacenter__img image__container">
+                <img src="img/about-us/web_hosting.png" alt="web_hosting">
+            </div>
+            <div class="about-datacenter__content">
+                <h3 class="title title_left">Каналы связи</h3>
+                <p class="paragraph">Оптоволоконная инфраструктура построена по системе «кольцо». Транспортная сеть
+                    10/40G построена
+                    по технологии 2N. Подключения клиентов осуществляются по технологиям 10/100/1000 auto
+                    (copper-rj45)
+                    и 1/10G (fiber sm/mm). Возможно LACP-включение в ядро сети в порты 2x1/10G (fiber sm/mm) с
+                    резервированием коммутаторов на нашей стороне. Операторы, включенные в транспортную сеть:
+                    Becloud, НЦОТ, МТС, Деловая сеть, TCM, Айпи Телком, Флайнет, Qline, Айчына, Анитекс.</p>
+                <p class="paragraph">Операторы связи, имеющие точку присутствия (коммутатор) в ЦОД, и оказывающие
+                    клиентам ЦОД услугу
+                    присоединения к их сетям: ТСМ, Деловая сеть, Белтелеком, МТС, Банковская финансовая телесеть
+                    (БФТ), Айпи Телком, Флайнет.</p>
                 <a href="https://noc.datahata.by/" class="button button_bordered about-datacenter__button"><span>Информация для сетевых инженеров</span></a>
             </div>
         </div>
-        <div class="about-datacenter__content layout-2-column layout-2-column_reverse">
-            <div class="about-datacenter__info">
-                <h3>Безопасность</h3>
-                <div class="about-datacenter__text">
-                    <p>Помещение ЦОД находится на закрытой территории. Все помещения и прилегающая территория
-                        круглосуточно охраняются. Система безопасности двухуровневая: служба охраны завода с доступом по электронным
-                        пропускам, и система контроля доступа и видеонаблюдения дата-центра.</p>
-                    <p>Система контроля и учета доступа (СКУД) обеспечивает контроль и санкционирование доступа в
-                        помещения дата-центра. Ведется архив событий.</p>
-                    <p>Все помещения ЦОД оборудованы системой видеонаблюдения. Ведется запись видеоархива. Возможна
-                        организация онлайн – видеонаблюдения.</p>
-                    <p>Двери помещений оснащены электронными замками и считывателями карт.</p>
-                    <p>Система обнаружения пожаров, датчики задымления и система пожаротушения обеспечивают
-                        пожаробезопасность дата-центра. Все элементы внутренней отделки изготовлены из негорючих
-                        материалов с пожароустойчивостью по классу НГ/Г1.</p>
-                </div>
+        <div class="layout-2-column layout-2-column_reverse">
+            <div class="about-datacenter__content">
+                <h3 class="title title_left">Безопасность</h3>
+                <p class="paragraph">Помещение ЦОД находится на закрытой территории. Все помещения и прилегающая
+                    территория
+                    круглосуточно охраняются. Система безопасности двухуровневая: служба охраны завода с доступом по
+                    электронным
+                    пропускам, и система контроля доступа и видеонаблюдения дата-центра.</p>
+                <p class="paragraph">Система контроля и учета доступа (СКУД) обеспечивает контроль и санкционирование
+                    доступа в
+                    помещения дата-центра. Ведется архив событий.</p>
+                <p class="paragraph">Все помещения ЦОД оборудованы системой видеонаблюдения. Ведется запись видеоархива.
+                    Возможна
+                    организация онлайн – видеонаблюдения.</p>
+                <p class="paragraph">Двери помещений оснащены электронными замками и считывателями карт.</p>
+                <p class="paragraph">Система обнаружения пожаров, датчики задымления и система пожаротушения
+                    обеспечивают
+                    пожаробезопасность дата-центра. Все элементы внутренней отделки изготовлены из негорючих
+                    материалов с пожароустойчивостью по классу НГ/Г1.</p>
             </div>
-            <img class="about-datacenter__img" src="img/about-us/security.png" alt="security">
+            <div class="about-datacenter__img image__container">
+                <img src="img/about-us/security.png" alt="security">
+            </div>
         </div>
-        <div class="about-datacenter__content layout-2-column">
-            <img class="about-datacenter__img" src="img/about-us/Business.png" alt="business">
-            <div class="about-datacenter__info">
-                <h3>Обслуживание</h3>
-                <div class="about-datacenter__text">
-                    <p>Системные администраторы ЦОД дежурят круглосуточно – 24/7.</p>
-                    <p>Дата-центр оснащен системой комплексного мониторинга оборудования (состояние сетей и каналов
-                        связи, работоспособность серверного и сетевого оборудования, обнаружения DDoS атак), которая извещает о
-                        любых отклонениях в работе систем.</p>
-                    <p>Коэффициент отказоустойчивости (uptime) составляет 99,991 % (возможно заключение договоров с SLA).</p>
-                </div>
+        <div class="layout-2-column">
+            <div class="about-datacenter__img image__container">
+                <img src="img/about-us/Business.png" alt="business">
+            </div>
+            <div class="about-datacenter__content">
+                <h3 class="title title_left">Обслуживание</h3>
+                <p class="paragraph">Системные администраторы ЦОД дежурят круглосуточно – 24/7.</p>
+                <p class="paragraph">Дата-центр оснащен системой комплексного мониторинга оборудования (состояние сетей и каналов
+                    связи, работоспособность серверного и сетевого оборудования, обнаружения DDoS атак), которая
+                    извещает о
+                    любых отклонениях в работе систем.</p>
+                <p class="paragraph">Коэффициент отказоустойчивости (uptime) составляет 99,991 % (возможно заключение договоров с
+                    SLA).</p>
             </div>
         </div>
     </div>
