--- a/datacenter-project/#src/components/company/contacts/_contacts.html
+++ b/datacenter-project/#src/components/company/contacts/_contacts.html
@@ -32,7 +32,9 @@
                 <h4>Тех.поддержка</h4>
                 @@include('_support-contact.html')
             </div>
-            <img class="contacts__img" src="img/contacts/Email.png" alt="section-img">
+            <div class="contacts__img image__container">
+                <img src="img/contacts/email.png" alt="section-img">
+            </div>
         </div>
     </div>
 </section>
