--- a/datacenter-project/#src/components/company/details/_details.html
+++ b/datacenter-project/#src/components/company/details/_details.html
@@ -1,9 +1,11 @@
 <section class="details section-padding">
     <div class="container layout-2-column">
-            <div class="details__content">
-                <h1 class="details__title">Наши реквизиты</h1>
-                @@include('_details-data.html')
-            </div>
-            <img class="details__img" src="img/main-about/about.png" alt="section image">
+        <div class="details__content">
+            <h1 class="details__title">Наши реквизиты</h1>
+            @@include('_details-data.html')
+        </div>
+        <div class="details__img image__container">
+            <img src="img/main-about/about.png" alt="section image">
+        </div>
     </div>
 </section>
