--- a/datacenter-project/#src/components/for-clients/_document.html
+++ b/datacenter-project/#src/components/for-clients/_document.html
@@ -1,4 +1,4 @@
-<section class="document">
+<section class="document section-padding">
     <div class="container document__container">
         <h1 class="document__title">Документы</h1>
         <p class="document__subtitle">ООО "Датахата"</p>
