--- a/datacenter-project/#src/components/for-clients/_instruction.html
+++ b/datacenter-project/#src/components/for-clients/_instruction.html
@@ -1,40 +1,43 @@
-<section class="instruction">
+<section class="instruction section-padding">
     <div class="container layout-2-column">
-            <div class="instruction__content">
-                <h1 class="instruction__title">Как разместить сервер</h1>
-                <p class="instruction__subtitle">
-                    Для того, что бы стать нашим клиентом и разместить оборудование в нашем дата-центре, вам
-                    необходимо:
-                </p>
-                <ul class="list">
-                    <li>Ознакомиться с тарифами на <a href="unit.html">Размещение стоечных
-                        серверов</a> и <a href="tower.html">Размещение башенного сервера</a>;
-                    </li>
-                    <li>Зарегистрироваться в нашей <a href="my.datahata.by">биллинговой системе</a>;</li>
-                    <li>В <a href="my.datahata.by">биллинговой системе</a> заказать услугу "Размещение сервера" -
-                        "Размещение стоечного сервера" или "Размещение башенного сервера", указать там все параметры
-                        оборудования (мощность блока питания, количество портов и IP);
-                    </li>
-                    <li>Оплатить полученный счет - <a href="payments.html">способы оплаты</a>;</li>
-                    <li>Связаться с нашей <a href="contacts.html">службой продаж</a> и заехать к нам в офис за
-                        оригиналами документов;
-                    </li>
-                    <li>Привезти сервер в дата-центр. Наши инженеры установят его в стойку, и предоставят вам
-                        удаленный доступ через IP-KVM. При необходимости, вы можете согласовать сетевые параметры со
-                        службой технической поддержки заранее, создав тикет в биллинговой системе;
-                    </li>
-                    <li>Стоечный сервер размещается только при наличии салазок. В случае отсутствия салазок мы можем
-                        предложить вам установить оборудование на стоечную полку. Полку можно приобрести у нас по
-                        цене 60,0 BYN с НДС (единоразовый платеж). Она занимает один дополнительный юнит в шкафу.
-                        Так же, вы можете принести свою полку, согласовав ее размеры с нашими специалистами;
-                    </li>
-                    <li>Ознакомиться с условиями Публичного договора вы можете у нас на сайте <a
-                            href="document.html">Публичный договор возмездного оказания услуг</a> или в <a
-                            href="my.datahata.by">биллинговой системе</a> раздел "Клиент" - "Договоры".
-                    </li>
-                </ul>
-            </div>
-            <img class="instruction__img" src="img/instruction/cloud_database.png" alt="section-img">
+        <div class="instruction__content">
+            <h1 class="instruction__title">Как разместить сервер</h1>
+            <p class="instruction__subtitle">
+                Для того, что бы стать нашим клиентом и разместить оборудование в нашем дата-центре, вам
+                необходимо:
+            </p>
+            <ul class="list">
+                <li>Ознакомиться с тарифами на <a href="unit.html">Размещение стоечных
+                    серверов</a> и <a href="tower.html">Размещение башенного сервера</a>;
+                </li>
+                <li>Зарегистрироваться в нашей <a href="https://my.datahata.by/">биллинговой системе</a>;</li>
+                <li>В <a href="https://my.datahata.by/">биллинговой системе</a> заказать услугу "Размещение сервера" -
+                    "Размещение стоечного сервера" или "Размещение башенного сервера", указать там все параметры
+                    оборудования (мощность блока питания, количество портов и IP);
+                </li>
+                <li>Оплатить полученный счет - <a href="payments.html">способы оплаты</a>;</li>
+                <li>Связаться с нашей <a href="contacts.html">службой продаж</a> и заехать к нам в офис за
+                    оригиналами документов;
+                </li>
+                <li>Привезти сервер в дата-центр. Наши инженеры установят его в стойку, и предоставят вам
+                    удаленный доступ через IP-KVM. При необходимости, вы можете согласовать сетевые параметры со
+                    службой технической поддержки заранее, создав тикет в биллинговой системе;
+                </li>
+                <li>Стоечный сервер размещается только при наличии салазок. В случае отсутствия салазок мы можем
+                    предложить вам установить оборудование на стоечную полку. Полку можно приобрести у нас по
+                    цене 60,0 BYN с НДС (единоразовый платеж). Она занимает один дополнительный юнит в шкафу.
+                    Так же, вы можете принести свою полку, согласовав ее размеры с нашими специалистами;
+                </li>
+                <li>Ознакомиться с условиями Публичного договора вы можете у нас на сайте <a
+                        href="document.html">Публичный договор возмездного оказания услуг</a> или в <a
+                        href="https://my.datahata.by/">биллинговой системе</a> раздел "Клиент" - "Договоры".
+                </li>
+            </ul>
+        </div>
+        <div class="instruction__img image__container">
+            <img src="img/instruction/cloud_database.png" alt="section-img">
+        </div>
+
 
     </div>
 </section>
