--- a/datacenter-project/#src/components/main/_about.html
+++ b/datacenter-project/#src/components/main/_about.html
@@ -2,16 +2,16 @@
     <div class="container">
         <div class="about__container layout-2-column layout-2-column_reverse">
             <div class="about__content">
-                <h2 class="about__title">О нашем дата-центре</h2>
-                <p class="about__text">ЦОД "Датахата" – является первым коммерческим дата-центром в Республике
+                <h2 class="title title_light title_left">О нашем дата-центре</h2>
+                <p class="paragraph">ЦОД "Датахата" – является первым коммерческим дата-центром в Республике
                     Беларусь.</p>
-                <p class="about__text">Дата-центр оснащен системой комплексного мониторинга оборудования (состояние
+                <p class="paragraph">Дата-центр оснащен системой комплексного мониторинга оборудования (состояние
                     сетей и каналов связи,<br> работоспособность серверного и сетевого оборудования, обнаружения
                     DDoS атак), которая извещает о любых отклонениях в работе систем.</p>
-                <p class="about__text">Коэффициент отказоустойчивости (uptime) составляет 99,991 % (возможно
+                <p class="paragraph">Коэффициент отказоустойчивости (uptime) составляет 99,991 % (возможно
                     заключение договоров с SLA).</p>
             </div>
-            <div class="about__image">
+            <div class="about__img image__container">
                 <img src="img/main-about/about.png" alt="section-image">
             </div>
         </div>
