--- a/datacenter-project/#src/components/services/colo/_colo.html
+++ b/datacenter-project/#src/components/services/colo/_colo.html
@@ -1,20 +1,20 @@
-<section class="all-services">
+<section class="all-services section-padding">
     <div class="container">
-        <h1 class="all-services__title">Размещение серверного <br> оборудования - Colocation</h1>
+        <h1 class="title">Размещение серверного <br> оборудования - Colocation</h1>
         <div class="all-services__accordion">
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>В 19" стойках</p>
-                    <img src="img/icons/btn-rotate.svg" class="button__arrow button__arrow_rotate" alt="arrow">
+                    <div class="button__arrow button__arrow_rotate"></div>
                 </div>
-                <div class="accordion__body" id="first-open-body">
+                <div class="accordion__body first-open-body">
                     @@include('./unit/_unit.html')
                 </div>
             </div>
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>В башенных корпусах</p>
-                    <img src="img/icons/btn-rotate.svg" class="button__arrow" alt="arrow">
+                  <div class="button__arrow"></div>
                 </div>
                 <div class="accordion__body">
                     @@include('./tower/_tower.html')
@@ -23,11 +23,11 @@
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>Дополнительные услуги</p>
-                    <img src="img/icons/btn-rotate.svg" class="button__arrow" alt="arrow">
+                  <div class="button__arrow"></div>
                 </div>
                 <div class="accordion__body">
                     <div class="services__content">
-                        <p class="service__text">По желанию клиента Центр обработки данных готов предоставить также ряд дополнительных услуг, не входящих в стоимость размещения сервера. Со списком Вы можете ознакомиться ниже.</p>
+                        <p class="paragraph">По желанию клиента Центр обработки данных готов предоставить также ряд дополнительных услуг, не входящих в стоимость размещения сервера. Со списком Вы можете ознакомиться ниже.</p>
                         @@include('_additional-services.html')
                     </div>
                 </div>
@@ -35,7 +35,7 @@
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>Аренда стойки</p>
-                    <img src="img/icons/btn-rotate.svg" class="button__arrow" alt="arrow">
+                  <div class="button__arrow"></div>
                 </div>
                 <div class="accordion__body">
                     @@include('./rent-rack/_rent-rack.html')
@@ -44,9 +44,9 @@
             @@include('../../base/_calculator.html')
         </div>
         <div class="all-services__text">
-            <p>Размещение серверов (колокейшен, colocation server) и телекоммуникационного оборудования
+            <p class="paragraph">Размещение серверов (колокейшен, colocation server) и телекоммуникационного оборудования
                 в ЦОД “ДатаХата” организовано на принципах:</p>
-            <ul>
+            <ul class="list">
                 <li>высокий уровень безопасности, предполагающий круглосуточный видеоконтроль и охрану
                     доступа к серверным помещениям;
                 </li>
@@ -59,7 +59,7 @@
                 <li>обеспечение стабильного энергоснабжения;</li>
                 <li>уровень безопасности - не ниже класса Tier III.</li>
             </ul>
-            <p>В услугу colocation входит тщательный анализ производительности серверного
+            <p class="paragraph">В услугу colocation входит тщательный анализ производительности серверного
                 оборудования, постоянная техническая поддержка помощь в обслуживании, возможная
                 модернизация.</p>
 
