--- a/datacenter-project/#src/components/services/colo/rent-rack/_rent-rack.html
+++ b/datacenter-project/#src/components/services/colo/rent-rack/_rent-rack.html
@@ -1,9 +1,9 @@
 <div class="services__content">
-    <p class="service__text">Для успешной работы крупной и активно развивающейся компании
+    <p class="paragraph">Для успешной работы крупной и активно развивающейся компании
         предлагаем предоставление в аренду серверной стойки (шкафа).
         Наш дата-центр соответствует требованиям, предъявляемым к хостинговым площадкам
         стандартом PCI DSS 2.0</p>
-    <p class="service__text service__text_bold">Параметры телекоммуникационного шкафа:</p>
+    <p class="paragraph paragraph_bold">Параметры телекоммуникационного шкафа:</p>
     <div class="table">
         <div class="table__body">
             <div class="table__row">
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-    <p class="service__text service__text_mb">Расчет стоимости аренды телекоммуникационного шкафа производится
+    <p class="paragraph">Расчет стоимости аренды телекоммуникационного шкафа производится
         индивидуально для
         каждого клиента.</p>
     <a class="button button_colored" href="https://my.datahata.by/"><span>Заказать</span></a>
