--- a/datacenter-project/#src/components/services/dedic/_dedic-table.html
+++ b/datacenter-project/#src/components/services/dedic/_dedic-table.html
@@ -3,10 +3,10 @@
         @@include('../../base/_calculator-configurator.html')
     </div>
 </div>
-<p class="service__text service__text_mb">Под заказ (2-5 рабочих дней) доступны любые конфигурации серверов.</p>
+<p class="paragraph">Под заказ (2-5 рабочих дней) доступны любые конфигурации серверов.</p>
 <div class="service__info">
-    <p>В абонентскую плату включено:</p>
-    <ul>
+    <p class="paragraph paragraph_bold">В абонентскую плату включено:</p>
+    <ul class="list">
         <li>Автоматическая установка и переустановка ОС (Centos 6/7, Debian 7/8, Ubuntu,
             FreeBSD, Windows);
         </li>
