--- a/datacenter-project/#src/components/services/dedic/_dedic.html
+++ b/datacenter-project/#src/components/services/dedic/_dedic.html
@@ -1,9 +1,9 @@
 <div class="service__container">
-    <p class="service__text service__text_mb">Услуга "Выделенный сервер" ("Dedicated", "дедикейтед") - это аренда
+    <p class="paragraph">Услуга "Выделенный сервер" ("Dedicated", "дедикейтед") - это аренда
         сервера, размещенного в нашем дата-центре с гарантированным доступом в сеть Интернет,
         бесперебойным питанием, кондиционированием, а так же круглосуточной технической поддержкой.
     </p>
-    <p class="service__text service__text_mb">
+    <p class="paragraph">
         Dedicated server в переводе означает “выделенный сервер”. Это услуга центра обработки данных, которая
         предполагает передачу целого сервера в аренду одному клиенту. Потребитель, воспользовавшись услугой Dedicated
         service, получает всю его мощность для потребностей своего веб-ресурса, без необходимости делить ее с другими
@@ -12,15 +12,15 @@
         пользователями. Совместное использование одного сервера несколькими бизнес-пользователями ставит под угрозу
         сохранность и безопасность баз их данных.
     </p>
-    <p class="service__text">Если вы не нашли подходящую для вас конфигурацию, сообщите нам и мы создадим персональное
+    <p class="paragraph">Если вы не нашли подходящую для вас конфигурацию, сообщите нам и мы создадим персональное
         решение – Custom Dedicated – оптимальное именно для вас. Для этого оставьте заявку.</p>
     @@include("_dedic-table.html")
-    <p class="service__text service__text_mb">Аренда выделенного сервера в ЦОД "Датахата" в Минске (Беларусь) позволит Вам в большей мере сосредоточиться на развитии бизнес-проекта, а не на вопросах приобретения серверного оборудования, программного обеспечения, подбора специалистов или поиска помещений, соответствующих техническим требованиям. Стоимость аренды сервера в дата-центре сочетает в себе выгодную цену, широкий спектр предоставляемых услуг, отличную производительность и, что немаловажно, безопасность.</p>
-    <p class="service__text service__text_mb">По желанию клиента Центр обработки данных готов предоставить также ряд дополнительных услуг, не входящих в стоимость аренды. Со списком Вы можете ознакомиться ниже.</p>
+    <p class="paragraph">Аренда выделенного сервера в ЦОД "Датахата" в Минске (Беларусь) позволит Вам в большей мере сосредоточиться на развитии бизнес-проекта, а не на вопросах приобретения серверного оборудования, программного обеспечения, подбора специалистов или поиска помещений, соответствующих техническим требованиям. Стоимость аренды сервера в дата-центре сочетает в себе выгодную цену, широкий спектр предоставляемых услуг, отличную производительность и, что немаловажно, безопасность.</p>
+    <p class="paragraph">По желанию клиента Центр обработки данных готов предоставить также ряд дополнительных услуг, не входящих в стоимость аренды. Со списком Вы можете ознакомиться ниже.</p>
     @@include("../colo/_additional-services.html")
-    <p class="service__text service__text_mb">Безопасность – это важнейшая компонента для многих бизнесов. Поэтому клиенты с услугой Dedicated server могут самостоятельно устанавливать, настраивать и контролировать такие решения безопасности, как брандмауэры и специальные приложения защиты данных своих клиентов.</p>
-    <p class="service__text service__text_mb">С услугой Dedicated клиент приобретает возможность использования всех мощностей арендованного сервера. Это очень важно для больших интернет-проектов со значительным онлайн-траффиком. Размещая ресурс на отдельном выделенном сервере, бизнес получает гарантию, что сайт будет работать быстро и без перебоев. А это играет важную роль для пользовательского опыта его клиентов. Наш центр обработки данных входит в список лучших компаний Беларуси, обеспечивающих практически 100% доступность серверов.</p>
-    <p class="service__text service__text_mb">Еще одной важной особенностью Dedicated server является предоставление провайдером возможности самостоятельного выбора и настройки нужных операционных систем, приложений, скриптов и установления других программ, необходимых для работы сайта.</p>
+    <p class="paragraph">Безопасность – это важнейшая компонента для многих бизнесов. Поэтому клиенты с услугой Dedicated server могут самостоятельно устанавливать, настраивать и контролировать такие решения безопасности, как брандмауэры и специальные приложения защиты данных своих клиентов.</p>
+    <p class="paragraph">С услугой Dedicated клиент приобретает возможность использования всех мощностей арендованного сервера. Это очень важно для больших интернет-проектов со значительным онлайн-траффиком. Размещая ресурс на отдельном выделенном сервере, бизнес получает гарантию, что сайт будет работать быстро и без перебоев. А это играет важную роль для пользовательского опыта его клиентов. Наш центр обработки данных входит в список лучших компаний Беларуси, обеспечивающих практически 100% доступность серверов.</p>
+    <p class="paragraph">Еще одной важной особенностью Dedicated server является предоставление провайдером возможности самостоятельного выбора и настройки нужных операционных систем, приложений, скриптов и установления других программ, необходимых для работы сайта.</p>
 
 
 </div>
