--- a/datacenter-project/#src/components/services/dedic/_dedicated.html
+++ b/datacenter-project/#src/components/services/dedic/_dedicated.html
@@ -1,33 +1,44 @@
-<section class="all-services" id="server-page">
+<section class="all-services section-padding" id="server-page">
     <div class="container">
-        <h1 class="all-services__title">Аренда сервера в Беларуси - Dedicated</h1>
+        <h1 class="title">Аренда сервера в Беларуси - Dedicated</h1>
         <div class="all-services__accordion">
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>Аренда сервера</p>
-                    <img src="img/icons/btn-rotate.svg" class="button__arrow button__arrow_rotate" alt="arrow">
+                    <div class="button__arrow button__arrow_rotate"></div>
                 </div>
-                <div class="accordion__body" id="first-open-body">
+                <div class="accordion__body first-open-body">
                     <div class="service__container">
-                        <p class="service__text service__text_mb">Услуга "Выделенный сервер" ("Dedicated", "дедикейтед") - это аренда сервера, размещенного в нашем дата-центре с гарантированным доступом в сеть Интернет, бесперебойным питанием, кондиционированием, а так же круглосуточной технической поддержкой.
+                        <p class="paragraph">Услуга "Выделенный сервер" ("Dedicated", "дедикейтед") - это аренда
+                            сервера, размещенного в нашем дата-центре с гарантированным доступом в сеть Интернет,
+                            бесперебойным питанием, кондиционированием, а так же круглосуточной технической поддержкой.
                         </p>
-                        <p class="service__text service__text_mb">
-                            Цена аренды сервера в ЦОД Датахата стартует от 87 белорусских рублей. Узнать, сколько будет стоить аренда физического сервера в месяц, можно, используя приведенный ниже калькулятор-конфигуратор:
+                        <p class="paragraph">
+                            Цена аренды сервера в ЦОД Датахата стартует от 87 белорусских рублей. Узнать, сколько будет
+                            стоить аренда физического сервера в месяц, можно, используя приведенный ниже
+                            калькулятор-конфигуратор:
                         </p>
                         @@include("_dedic-table.html")
 
-                        <p class="service__text service__text_mb">Аренда выделенного сервера в ЦОД "Датахата" в Минске (Беларусь) позволит Вам в большей мере сосредоточиться на развитии бизнес-проекта, а не на вопросах приобретения серверного оборудования, программного обеспечения, подбора специалистов или поиска помещений, соответствующих техническим требованиям. Стоимость аренды сервера в дата-центре сочетает в себе выгодную цену, широкий спектр предоставляемых услуг, отличную производительность и, что немаловажно, безопасность.</p>
+                        <p class="paragraph">Аренда выделенного сервера в ЦОД "Датахата" в Минске
+                            (Беларусь) позволит Вам в большей мере сосредоточиться на развитии бизнес-проекта, а не на
+                            вопросах приобретения серверного оборудования, программного обеспечения, подбора
+                            специалистов или поиска помещений, соответствующих техническим требованиям. Стоимость аренды
+                            сервера в дата-центре сочетает в себе выгодную цену, широкий спектр предоставляемых услуг,
+                            отличную производительность и, что немаловажно, безопасность.</p>
                     </div>
                 </div>
             </div>
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>Дополнительные услуги</p>
-                    <img src="img/icons/btn-rotate.svg" class="button__arrow" alt="arrow">
+                  <div class="button__arrow"></div>
                 </div>
                 <div class="accordion__body">
                     <div class="services__content">
-                        <p class="service__text">По желанию клиента Центр обработки данных готов предоставить также ряд дополнительных услуг, не входящих в стоимость аренды. Со списком Вы можете ознакомиться ниже.</p>
+                        <p class="paragraph">По желанию клиента Центр обработки данных готов предоставить также ряд
+                            дополнительных услуг, не входящих в стоимость аренды. Со списком Вы можете ознакомиться
+                            ниже.</p>
                         @@include('../colo/_additional-services.html')
                     </div>
                 </div>
@@ -35,11 +46,12 @@
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>Купить сервер</p>
-                    <img src="img/icons/btn-rotate.svg" class="button__arrow" alt="arrow">
+                  <div class="button__arrow"></div>
                 </div>
                 <div class="accordion__body">
                     <div class="services__content">
-                        <p class="service__text">Мы подберем оптимальную для вас конфигурацию сервера. Для уточнения параметров и цен - <a href="contacts.html">свяжитесь с нами</a>.</p>
+                        <p class="paragraph">Мы подберем оптимальную для вас конфигурацию сервера. Для уточнения
+                            параметров и цен - <a href="contacts.html">свяжитесь с нами</a>.</p>
                     </div>
                 </div>
             </div>
