--- a/datacenter-project/#src/components/services/other/_back-up.html
+++ b/datacenter-project/#src/components/services/other/_back-up.html
@@ -1,5 +1,5 @@
 <div class="service__container">
-    <p class="service__text">Мы можем предложить вам дисковое пространство для хранения резервных копий (бэкапов) на
+    <p class="paragraph">Мы можем предложить вам дисковое пространство для хранения резервных копий (бэкапов) на
         наших мощностях, с доступом по сетевым протоколам FTP, NFS и SMB из сети дата-центра:
     </p>
     <div class="table">
