--- a/datacenter-project/#src/components/services/other/_ssl.html
+++ b/datacenter-project/#src/components/services/other/_ssl.html
@@ -1,5 +1,5 @@
 <div class="service__container">
-    <p class="service__text">SSL-шифрование - это уже несколько лет не далекая фантастика, а
+    <p class="paragraph">SSL-шифрование - это уже несколько лет не далекая фантастика, а
         реальная необходимость для любого более-менее серьезного ресурса. HTTPS позволяет не
         только зашифровать все данные, которые пользователь передает вам на ресурс, но и
         гарантировать что пользователь просматривает именно ваш сайт. Сайты с https выше
