--- a/datacenter-project/#src/components/services/soft/_isp.html
+++ b/datacenter-project/#src/components/services/soft/_isp.html
@@ -1,5 +1,5 @@
 <div class="service__container">
-    <p class="service__text">Мы предоставляем возможность арендовать (или приобрести вечную
+    <p class="paragraph">Мы предоставляем возможность арендовать (или приобрести вечную
         лицензию)
         на панели управления хостинговым бизнесом компании ISPsystem.</p>
     <div class="table">
