--- a/datacenter-project/#src/components/services/soft/_software.html
+++ b/datacenter-project/#src/components/services/soft/_software.html
@@ -1,20 +1,20 @@
-<section class="all-services" id="soft-page">
+<section class="all-services section-padding" id="soft-page">
     <div class="container">
-        <h1 class="all-services__title">Программное обеспечение</h1>
+        <h1 class="title">Программное обеспечение</h1>
         <div class="all-services__accordion">
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>ISPsystem</p>
-                    <img src="img/icons/btn-rotate.svg" class="button__arrow button__arrow_rotate" alt="arrow">
+                    <div class="button__arrow button__arrow_rotate"></div>
                 </div>
-                <div class="accordion__body" id="first-open-body">
+                <div class="accordion__body first-open-body">
                     @@include('_isp.html')
                 </div>
             </div>
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>Only Office</p>
-                    <img src="img/icons/btn-rotate.svg" class="button__arrow" alt="arrow">
+                  <div class="button__arrow"></div>
                 </div>
                 <div class="accordion__body">
                     @@include('_only-office.html')
