--- a/datacenter-project/#src/scss/style.scss
+++ b/datacenter-project/#src/scss/style.scss
@@ -40,8 +40,8 @@
 @import "./components/main/offer";
 
 //company
-@import "./components/company/about/about-us";
-@import "./components/company/about/about-us_cards";
+
+@import "components/company/about/about-us_cards";
 @import "./components/company/about/about_datacenter";
 @import "./components/company/map/map";
 @import "./components/company/details/details";
