--- a/datacenter-project/#src/components/for-clients/_payments.html
+++ b/datacenter-project/#src/components/for-clients/_payments.html
@@ -1,14 +1,14 @@
-<section class="payments">
+<section class="payments section-padding">
     <div class="container payments__container">
         <div class="layout-2-column">
             <div class="payments__content">
                 <h1 class="payments__title">Способы оплаты</h1>
-                <p class="payments__text">Оплатить наши услуги можно через Ваш личный кабинет. Для создания счета
+                <p class="paragraph">Оплатить наши услуги можно через Ваш личный кабинет. Для создания счета
                     воспользуйтесь
                     кнопкой "Пополнить баланс" на главной странице личного кабинета. В разделе "Платежи" можно
                     распечатать платежное поручение, для этого выберите нужный счет и воспользуйтесь кнопкой
                     "Печать".</p>
-                <p class="payments__text">Вы можете пополнить баланс на любую сумму. Абонентская плата за наши услуги
+                <p class="paragraph">Вы можете пополнить баланс на любую сумму. Абонентская плата за наши услуги
                     списывается
                     ежедневно равными долями.</p>
                 <div class="payments__cards">
@@ -33,23 +33,30 @@
                     </div>
                 </div>
             </div>
-            <img class="payments__img" src="img/payments/payment.png" alt="section-img">
+            <div class="payments__img image__container">
+                <img src="img/payments/coins.png" alt="section-img">
+            </div>
+            <div class="payments__img-mob image__container">
+                <img src="img/payments/payment.png" alt="section-img">
+            </div>
         </div>
         <div class="layout-2-column">
             <div class="payments__content">
                 <p class="payments__subtitle">Оплата по безналичному расчету</p>
-                <p class="payments__text">Оплатить наши услуги можно через Ваш личный кабинет. Для создания счета
+                <p class="paragraph">Оплатить наши услуги можно через Ваш личный кабинет. Для создания счета
                     воспользуйтесь
                     кнопкой "Пополнить баланс" на главной странице личного кабинета. В разделе "Платежи" можно
                     распечатать платежное поручение, для этого выберите нужный счет и воспользуйтесь кнопкой
                     "Печать".</p>
-                <p class="payments__text">Вы можете пополнить баланс на любую сумму. Абонентская плата за наши услуги
+                <p class="paragraph">Вы можете пополнить баланс на любую сумму. Абонентская плата за наши услуги
                     списывается
                     ежедневно равными долями.</p>
             </div>
         </div>
         <div class="layout-2-column">
-            <img class="payments__img" src="img/main-about/about.png" alt="section-img">
+            <div class="image__container">
+                <img src="img/main-about/about.png" alt="section-img">
+            </div>
             <div class="payments__content">
                 <p class="payments__subtitle">Наши реквизиты</p>
                 @@include('../company/details/_details-data.html')
@@ -85,7 +92,10 @@
                     </li>
                 </ol>
             </div>
-            <img class="payments__img" src="img/payments/Money.png" alt="section-img">
+            <div class="image__container">
+                <img src="img/payments/money.png" alt="section-img">
+            </div>
+
         </div>
     </div>
 </section>
