--- a/datacenter-project/#src/components/for-clients/_support.html
+++ b/datacenter-project/#src/components/for-clients/_support.html
@@ -1,16 +1,19 @@
-<section class="support">
+<section class="support section-padding">
     <div class="container">
         <div class="layout-2-column">
             <div class="support__content">
                 <h1 class="support__title">Техническая поддержка</h1>
-                <p class="payments__text">Служба технической поддержки Датахата готова помочь вам 24 часа в сутки, 7 дней в неделю.</p>
-                <p class="payments__text">Кроме этого, у нас есть команда инженеров, выполняющих работы по обслуживанию серверов и
+                <p class="paragraph">Служба технической поддержки Датахата готова помочь вам 24 часа в сутки, 7 дней в неделю.</p>
+                <p class="paragraph">Кроме этого, у нас есть команда инженеров, выполняющих работы по обслуживанию серверов и
                     IT-инфраструктуры заказчиков на договорной основе.</p>
-                <p class="payments__text">Написать запрос (тикет) в службу технической поддержки вы можете в нашей биллинговой системе.</p>
-                <p class="payments__text">Получить консультацию дежурного специалиста можно круглосуточно:</p>
+                <p class="paragraph">Написать запрос (тикет) в службу технической поддержки вы можете в нашей биллинговой системе.</p>
+                <p class="paragraph">Получить консультацию дежурного специалиста можно круглосуточно:</p>
                 @@include('../company/contacts/_support-contact.html')
             </div>
-            <img class="support__img" src="img/contacts/Email.png" alt="section-img">
+            <div class="image__container">
+                <img src="img/contacts/Email.png" alt="section-img">
+            </div>
+
         </div>
         <div class="layout-2-column">
             <div class="support__content">
@@ -30,9 +33,9 @@
                     <li>Администрирование вашего офисного IT-оборудования и сети;</li>
                     <li>Нестандартные технологические решения.</li>
                 </ul>
-                <p class="payments__text">Мы готовы обсудить с вами условия сотрудничества, напишите нам на <a href="mailto:sales@datahata.by">sales@datahata.by</a>
+                <p class="paragraph">Мы готовы обсудить с вами условия сотрудничества, напишите нам на <a href="mailto:sales@datahata.by">sales@datahata.by</a>
                 </p>
-                <p class="payments__text">Узнать больше о услугах IT-аутсорсинга вы можете <a href="https://xn--80aikcthwb9g.xn--90ais/">по
+                <p class="paragraph">Узнать больше о услугах IT-аутсорсинга вы можете <a href="https://xn--80aikcthwb9g.xn--90ais/">по
                     ссылке</a></p>
             </div>
 
