--- a/datacenter-project/#src/components/for-clients/_visited.html
+++ b/datacenter-project/#src/components/for-clients/_visited.html
@@ -1,16 +1,22 @@
-<section class="visited">
+<section class="visited section-padding">
     <div class="container layout-2-column">
         <div class="visited__content">
             <h1 class="visited__title">Правила посещения датацентра</h1>
-            <p class="payments__text">Для бронирования рабочего места в операторской дата-центра необходимо уведомить об этом наших
+            <p class="paragraph">Для бронирования рабочего места в операторской дата-центра необходимо уведомить об
+                этом наших
                 сотрудников в соответствии с договором не менее чем за 24 часа до посещения; в экстренных случаях
                 (срочный доступ) не менее чем за один час.</p>
-            <p class="payments__text">Доступ к оборудованию может быть предоставлен не более чем двум представителям Клиента одновременно.
+            <p class="paragraph">Доступ к оборудованию может быть предоставлен не более чем двум представителям
+                Клиента одновременно.
             </p>
-            <p class="payments__text">Как правило, продолжительность работ не должна превышать трех часов подряд.</p>
-            <p class="payments__text">Оборудование для обслуживания предоставляется в операторской комнате.</p>
-            <p class="payments__text">Для доступа необходим документ, удостоверяющий личность (паспорт или водительское удостоверение).</p>
+            <p class="paragraph">Как правило, продолжительность работ не должна превышать трех часов подряд.</p>
+            <p class="paragraph">Оборудование для обслуживания предоставляется в операторской комнате.</p>
+            <p class="paragraph">Для доступа необходим документ, удостоверяющий личность (паспорт или водительское
+                удостоверение).</p>
         </div>
-        <img class="visited__img" src="img/visit/City.png" alt="section-img">
+        <div class="image__container">
+            <img src="img/visit/City.png" alt="section-img">
+        </div>
+
     </div>
 </section>
