--- a/datacenter-project/#src/components/main/_review.html
+++ b/datacenter-project/#src/components/main/_review.html
@@ -6,16 +6,16 @@
                 <div class="review__card-inner">
                     <p class="card-inner__title">Сергей Гайдуков</p>
                     <p>Ген.директор ЧТПУП "Ланагор Трейд"</p>
-                        <div class="limiter">
-                            <p class="inner">
+                    <div class="limiter">
+                        <p class="paragraph">
                             Мы уже больше трех лет размещаем всю свою IT-ифраструктуру в датацентре компании “Датахата“.
                             Достаточно часто в нашей работе возникает необходимость оперативно отреагировать на
                             различные проишествия. Спасибо персоналу датахаты за своевременную и зачастую превентивную
                             помощь в решении различных ситуаций. Мы уже больше трех лет размещаем всю свою
                             IT-ифраструктуру в датацентре компании “Датахата“. Достаточно часто в нашей работе возникает
                             необходимость оперативно отреагировать на различные проишествия.
-                            </p>
-                        </div>
+                        </p>
+                    </div>
                     <div class="read-more-button">Развернуть</div>
                 </div>
             </div>
@@ -24,14 +24,18 @@
                     <p class="card-inner__title">Vadim Titov</p>
                     <p>CTO Magna Carta College</p>
                     <div class="limiter">
-                        Магна Карта Колледж расположен в Оксфорде и мы продвигаем наши инновационные образовательные
-                        программы по всему миру. Для успешной и бесперебойной работы студентов с образовательными
-                        материалами со всего мира, мы выбрали хостинг Датахата. Нас устраивает хорошая техническая
-                        поддержка и комплексный подход к обслуживанию клиентов. Качество предоставляемых услуг и
-                        приемлемая ценовая политика позволило остановить свой выбор на «Датахате» и мы об этом не
-                        пожалели. Благодаря хорошей работе, инновационным технологиям и обновленному дизайну веб-сайт
-                        Магна Карта Колледж Оксфорд на конкурсе Website of the year 2013 award стал лучшим сайтом 2013
-                        года в категории «Образовательный & социальный сайт»!
+                        <p class="paragraph">
+                            Магна Карта Колледж расположен в Оксфорде и мы продвигаем наши инновационные образовательные
+                            программы по всему миру. Для успешной и бесперебойной работы студентов с образовательными
+                            материалами со всего мира, мы выбрали хостинг Датахата. Нас устраивает хорошая техническая
+                            поддержка и комплексный подход к обслуживанию клиентов. Качество предоставляемых услуг и
+                            приемлемая ценовая политика позволило остановить свой выбор на «Датахате» и мы об этом не
+                            пожалели. Благодаря хорошей работе, инновационным технологиям и обновленному дизайну
+                            веб-сайт
+                            Магна Карта Колледж Оксфорд на конкурсе Website of the year 2013 award стал лучшим сайтом
+                            2013
+                            года в категории «Образовательный & социальный сайт»!
+                        </p>
                     </div>
                     <div class="read-more-button">Развернуть</div>
                 </div>
@@ -41,12 +45,17 @@
                     <p class="card-inner__title">Вячеслав Сенин</p>
                     <p>ASSIST Belarus, директор</p>
                     <div class="limiter">
-                        Компания ASSIST пользуется услугами «Датахата» уже 1,5 года. Всё это время хостинг был на
-                        высоте, а его команда неизменно показывала себя только с самой лучшей стороны. Профессионализм
-                        сотрудников дата-центра внушает уверенность, а отзывчивость и быстрая реакция техподдержки не
-                        раз выручали нас. Чувствуется, что для «Датахата» по-настоящему важен каждый клиент, и
-                        внимательное отношение сотрудников хостинга даже к самой простой задаче делает компании честь.
-                        Желаем «Датахата» роста и процветания!
+                        <p class="paragraph">
+                            Компания ASSIST пользуется услугами «Датахата» уже 1,5 года. Всё это время хостинг был на
+                            высоте, а его команда неизменно показывала себя только с самой лучшей стороны.
+                            Профессионализм
+                            сотрудников дата-центра внушает уверенность, а отзывчивость и быстрая реакция техподдержки
+                            не
+                            раз выручали нас. Чувствуется, что для «Датахата» по-настоящему важен каждый клиент, и
+                            внимательное отношение сотрудников хостинга даже к самой простой задаче делает компании
+                            честь.
+                            Желаем «Датахата» роста и процветания!
+                        </p>
                     </div>
                     <div class="read-more-button">Развернуть</div>
                 </div>
@@ -56,11 +65,14 @@
                     <p class="card-inner__title">Александр Глущенко</p>
                     <p>OOO “Музыкальный канал”</p>
                     <div class="limiter">
-                        Наш канал, начиная свое возвращение на рынок, нуждался в компании, которая смогла бы
-                        предоставить все необходимые инструменты для обеспечения нашего вещания с минимальными
-                        затратами. Компания “Датахата“ оказалась именно тем партнером, который смог адекватно предложить
-                        нам набор инструментов для решения наших производственных задач и существенно сократить наши
-                        издержки на IT.
+                        <p class="paragraph">
+                            Наш канал, начиная свое возвращение на рынок, нуждался в компании, которая смогла бы
+                            предоставить все необходимые инструменты для обеспечения нашего вещания с минимальными
+                            затратами. Компания “Датахата“ оказалась именно тем партнером, который смог адекватно
+                            предложить
+                            нам набор инструментов для решения наших производственных задач и существенно сократить наши
+                            издержки на IT.
+                        </p>
                     </div>
                     <div class="read-more-button">Развернуть</div>
                 </div>
