--- a/datacenter-project/#src/components/services/colo/unit/_unit.html
+++ b/datacenter-project/#src/components/services/colo/unit/_unit.html
@@ -1,5 +1,5 @@
 <div class="service__container">
-    <p class="service__text">Мы с удовольствием разместим на colocation ваши сервера и другое
+    <p class="paragraph">Мы с удовольствием разместим на colocation ваши сервера и другое
         телекоммуникационное оборудование
         в собственном дата-центре, оборудованном всем необходимым для обеспечения
         бесперебойной работы.</p>
@@ -10,16 +10,5 @@
         <a class="button button_colored service__button" href="https://my.datahata.by/"><span>Заказать</span></a>
         <button id="btn-unit" class="button button_bordered"><span>Рассчитать стоимость</span></button>
     </div>
-    <div class="service__info">
-        <p>В абонентскую плату включено:</p>
-        <ul>
-            <li>1 IPv4 и 1 IPv6 адрес;</li>
-            <li>1 порт подключения к коммутатору 1 Gb/s;</li>
-            <li>1 Tb входящего и 1 Tb исходящего внешнего трафика. В случае превышения
-                предоплаченного трафика стоимость следующего входящего 1 Gb составит 0,05
-                рублей, исходящего 1 Gb составит 0,1 рублей.
-            </li>
-        </ul>
-        <div>Инструкция: <a href="instruction.html">Как разместить сервер</a></div>
-    </div>
+    @@include('../_colo-subscription.html')
 </div>
