--- a/datacenter-project/#src/components/services/other/_domain.html
+++ b/datacenter-project/#src/components/services/other/_domain.html
@@ -1,13 +1,11 @@
 <div class="service__container">
-    <p class="service__text">Вы можете зарегистрировать у нас следующие доменные имена:</p>
+    <p class="paragraph">Вы можете зарегистрировать у нас следующие доменные имена:</p>
     <div class="table">
         <div class="table__head">
             <p>Зона домена</p>
             <p>Стоимость BYN с НДС, в год</p>
         </div>
-        <div class="table__body table__body_loading" id="domain">
-
-        </div>
+        <div class="table__body table__body_loading" id="domain"></div>
     </div>
     <div class="service__buttons">
         <a class="button button_colored service__button" href="https://my.datahata.by/"><span>Заказать</span></a>
