--- a/datacenter-project/#src/components/services/other/_other.html
+++ b/datacenter-project/#src/components/services/other/_other.html
@@ -1,20 +1,20 @@
-<section class="all-services" id="other-page">
+<section class="all-services section-padding" id="other-page">
     <div class="container">
-        <h1 class="all-services__title">Другие услуги дата-центра Датахата</h1>
+        <h1 class="title">Другие услуги дата-центра Датахата</h1>
         <div class="all-services__accordion">
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>Регистрация доменов</p>
-                    <img src="img/icons/btn-rotate.svg" class="button__arrow button__arrow_rotate" alt="arrow">
+                    <div class="button__arrow button__arrow_rotate"></div>
                 </div>
-                <div class="accordion__body" id="first-open-body">
+                <div class="accordion__body first-open-body">
                     @@include('_domain.html')
                 </div>
             </div>
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>SSL-сертификаты</p>
-                    <img src="img/icons/btn-rotate.svg" class="button__arrow" alt="arrow">
+                  <div class="button__arrow"></div>
                 </div>
                 <div class="accordion__body">
                     @@include('_ssl.html')
@@ -23,7 +23,7 @@
             <div class="accordion__section">
                 <div class="accordion__header">
                     <p>Место под бэкапы</p>
-                    <img src="img/icons/btn-rotate.svg" class="button__arrow" alt="arrow">
+                  <div class="button__arrow"></div>
                 </div>
                 <div class="accordion__body">
                     @@include('_back-up.html')
