--- a/datacenter-project/#src/components/services/soft/_only-office.html
+++ b/datacenter-project/#src/components/services/soft/_only-office.html
@@ -1,7 +1,7 @@
 <div class="service__container">
-    <p class="service__text">Вы можете приобрести лицензию на ПО <a href="https://www.onlyoffice.com/" target="_blank">OnlyOffice</a>. Цены соответствуют
+    <p class="paragraph">Вы можете приобрести лицензию на ПО <a href="https://www.onlyoffice.com/" target="_blank">OnlyOffice</a>. Цены соответствуют
         рекомендованным розничным ценам на сайте <a href="https://www.onlyoffice.com/" target="_blank">OnlyOffice</a></p>
-    <p class="service__text">Свяжитесь с нами, и мы обязательно подберем подходящее для вас
+    <p class="paragraph">Свяжитесь с нами, и мы обязательно подберем подходящее для вас
         решение.</p>
     <div class="service__buttons">
         <a class="button button_colored service__button" href="https://my.datahata.by/"><span>Связаться</span></a>
