--- a/datacenter-project/#src/scss/components/company/about/about_datacenter.scss
+++ b/datacenter-project/#src/scss/components/company/about/about_datacenter.scss
@@ -1,69 +1,27 @@
-
-.about-datacenter__content {
-  margin-bottom: 11.2rem;
-
-  @media (max-width: 768px) {
-    margin-bottom: 6rem;
-  }
-
-  picture{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.about-datacenter__container{
+  & >*{
+    margin-bottom: 5rem;
   }
 }
 
-.about-datacenter__info {
-  margin-top: 7rem;
-
-  h3 {
-    margin-bottom: 2rem;
-    @media (max-width: 1024px) {
-      text-align: center;
-    }
-  }
-
-
-  @media (max-width: 1024px) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: justify;
-  }
-
-}
-
-.about-datacenter__text {
-  & > p {
-    margin-bottom: 1rem;
-    @include font($size: 1.8rem, $weight: 400, $height: 160%);
-
-    @media (max-width: 420px) {
-      @include font($size: 1.6rem, $weight: 400, $height: 160%);
-      margin-bottom: 0;
-    }
-
-  }
-}
 
 
 #server-img{
   max-width: 280px;
-  width: 100%;
-  height: auto;
+
   @media (max-width: 768px) {
     max-width: 200px;
+    margin-bottom: 2rem;
   }
 }
+.about-datacenter__img{
+  max-width: 480px;
 
-.about-datacenter__img {
-  width: 100%;
-  height: auto;
   @media (max-width: 768px) {
-    max-width: 300px;
+    max-width: 200px;
+    margin-bottom: 2rem;
   }
 }
-
 .about-datacenter__button {
   margin-top: 3rem;
 
