--- a/datacenter-project/#src/scss/components/main/main-about.scss
+++ b/datacenter-project/#src/scss/components/main/main-about.scss
@@ -1,77 +1,33 @@
-// ABOUT SECTION
+.about__container {
+  border-radius: 20px;
+  @extend %bg-color-primary;
+  padding: 5.5rem 8rem;
 
-.about {
+  @media (max-width: 420px) {
+    padding: 3.5rem;
+  }
 
-    .about__container {
-        border-radius: 20px;
-        @extend %bg-color-primary;
-        padding: 5.5rem 8rem;
-
-        @media (max-width: 420px) {
-            padding: 3.5rem;
-        }
-
-        @media (max-width: 420px) {
-            padding: 3.5rem 2rem;
-        }
-    }
-
-    .about__image {
-        padding-top: 3.9rem;
-        padding-left: 5rem;
-        width: 100%;
-        flex-basis: 50%;
-
-        @media (max-width: 1024px) {
-            text-align: center;
-            padding-left: 0;
-        }
-
-        img {
-            width: 100%;
-            max-width: 441px;
-            height: auto;
-
-            @media (max-width: 1024px) and (min-width: 769px) {
-                max-width: 400px;
-            }
-
-            @media (max-width: 768px) and (min-width: 421px) {
-                max-width: 270px;
-            }
-
-            @media (max-width: 420px) {
-                max-width: 217px;
-            }
-        }
-    }
-    .about__content {
-        padding-top: 6.28rem;
-
-
-        @media (max-width: 420px) {
-            padding-top: 2rem;
-        }
-
-        .about__title{
-            margin-bottom: 3rem;
-            text-align: left;
-
-
-            @media (max-width: 768px) {
-                text-align: center;
-            }
-        }
-
-        .about__text {
-            @include font($size: 1.8rem, $height: 160%, $weight: 400);
-            margin-bottom: 1rem;
-            text-align: left;
-
-            @media (max-width: 1200px) {
-                @include font($size: 1.6rem, $height: 160%, $weight: 400);
-                margin-bottom: 0;
-            }
-        }
-    }
+  @media (max-width: 420px) {
+    padding: 3.5rem 2rem;
+  }
 }
+
+.about__img {
+  max-width: 440px;
+}
+
+
+.about__content {
+
+  //.about__text {
+  //  @include font($size: 1.8rem, $height: 160%, $weight: 400);
+  //  margin-bottom: 1rem;
+  //  text-align: left;
+  //
+  //  @media (max-width: 1200px) {
+  //    @include font($size: 1.6rem, $height: 160%, $weight: 400);
+  //    margin-bottom: 0;
+  //  }
+  //}
+}
+
